# lathe

./: .gitignore  .mcp.json  API.md  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  DATA_QUALITY.md  FOR_PROJECTS.md  LATHE_CAPABILITIES.md  LATHE_COMMANDS.md  LATHE_DEPENDENCIES.md  LATHE_GUIDE.md  LATHE_REVIEW_FINDINGS.md  LATHE_REVIEW_V2.md  LATHE_REVIEW_V3_FABLE.md  LATHE_REVIEW_V4_FABLE_PLAIN.md  LICENSE  PERSONAS.md  PRIOR_ART.md  README.md  REPRODUCIBILITY.md  REVIEW_MODE_COMPARISON.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VENDORING.md  WHITEPAPER.md  canary_36.py  claude_proxy.py  engine.py  engine_v2.py  env_catalog.py  lathe  lathe.cmd  lathe.config.example.json  lathe.py  lathe_api.py  lathe_mcp.py  procguard.py  pyproject.toml
.claude-plugin/: plugin.json
benchmark/: bench.py  results.json
docs/: ANGLES.md  API_PROPOSAL_REST.md  BENCHMARK_FABLE.md  CAPABILITY_MAP.md  CAPSTONE_REVIEW_v2.16.0.md  CLI_REFERENCE.md  DOC_CRITIQUE.md  GATES_REFERENCE.md  GATES_STRESS_TEST.md  GRAPHIC11_FACTCHECK.md  GUIDE_CLAUDE_SUBSCRIPTION.md  GUIDE_MCP.md  GUIDE_MODELS_AND_AGENTS.md  HOW_IT_WORKS.md  INTRODUCING_LATHE.md  LATHE_PRESENTATION_BRIEF.md  MARKETING_SALES_KIT.md  METHODOLOGY_ENFORCEMENT_VALIDATION.md  OPERATING_CONTRACT_DESIGN.md  PERSONA_STRESS_TEST.md  PERSONA_SYSTEM_DESIGN.md  PINS_REFERENCE.md  PRODUCT_STRATEGY.md  QUICKSTART_STANDALONE.md  REVIEW_v2.61.1_SHAKEDOWN.md  REVIEW_v2.62.6_DOCS_RECONCILIATION.md  REVIEW_v2.62.6_HARNESS_DEEP_AUDIT.md  REVIEW_v2.62.6_LIVE_SHAKEDOWN.md  SENIOR_TEAM_OPERATING_MODEL.md  SHAKEDOWN_v2.62.6_TERMINAL_DRIVE.md  TUNING.md  WHITEPAPER_DRAFT.md  WORKFLOW_REFERENCE.md  WORKFLOW_REFERENCE_COMPARISON.md  launch.html  (+3 more)
(+318 files in other folders)
